<resources>
    <string name="app_name">movies-app</string>
    <string name="txt_home">Trang chủ</string>
    <string name="txt_favorite">Yêu thích</string>
    <string name="txt_download">Tải về</string>
    <string name="txt_profile">Tôi</string>
    <string name="tv_title_2">Download and watch offline\n whrere ever you where</string>
    <string name="tv_title">Watch video in\nvisual reality</string>
    <string name="tv_get_in">Get in</string>
    <string name="tv_login">Đăng nhập</string>
    <string name="tv_forgot_your_password">Quên mật khẩu?</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="tv_email">Email</string>
    <string name="tv_register_now">Chưa có tài khoản? Đăng ký ngay</string>
    <string name="tv_register">Đăng ký</string>
    <string name="tv_do_you_have_an_account">Đã có tài khoản? Đăng nhập</string>
    <string name="tv_confirm_password">Xác nhận lại mật khẩu</string>
    <string name="tv_username">Username</string>
    <string name="incident">Bạn gặp sự cố khi đăng nhập?</string>
    <string name="introduction">Nhập email và chúng tôi sẽ gửi cho \nbạn một liên kết để truy cập lại vào tài khoản!</string>
    <string name="tv_cancel">Hủy</string>
    <string name="tv_send">Gửi</string>
    <string name="reset_link_sent">Chúng tôi đã gửi link đặt lại mật khẩu đến email của bạn</string>
    <string name="or">Hoặc</string>
    <string name="tv_notlogin">Trải nghiệm không cần đăng nhập</string>
    <string name="txt_notification">Thông báo</string>
    <string name="tv_setting">Settings</string>
    <string name="tvName">Name</string>
    <string name="tvEditProfile">Chỉnh sửa trang cá nhân</string>
    <string name="tvList">Danh sách phim của tôi</string>
    <string name="tvHistory">Lịch sử xem</string>
    <string name="tvLanguage">Ngôn ngữ:</string>
    <string name="tvQuestion">Câu hỏi thường gặp</string>
    <string name="general">Chung</string>
    <string name="tvLogout">Đăng xuất</string>
    <string name="version">Phiên bản 1.0</string>
    <string name="filmTitle">Nữ hoàng nước mắt Tập 1</string>
    <string name="tv_phone">Số điện thoại</string>
    <string name="tv_gender">Giới tính:</string>
    <string name="save">Lưu</string>
    <string name="tv_save">Lưu</string>
    <string name="myAccount">Tài khoản của tôi</string>
    <string name="tvMovieTitle">Kẻ săn lùng sợ hãi 3</string>
    <string name="time">152 phút</string>
    <string name="genre">Thể loại:</string>
    <string name="tvYear">Năm SX:</string>
    <string name="summary">Kẻ Săn Lùng Sợ Hãi 3 xoay quanh cuộc chiến không ngừng giữa Trung sĩ Davis Tubbs và con quái vật Creeper, một thế lực đầy bí ẩn gieo rắc nỗi kinh hoàng cứ sau mỗi 23 năm. Với sự trở lại của ...</string>
    <string name="tvDirectors">Đạo diễn:</string>
    <string name="tvActors">Diễn viên:</string>
    <string name="tvNations">Quốc gia:</string>
    <string name="views">Lượt xem</string>
    <string name="tvEpisode">Số tập:</string>
    <string name="totalEpisodes">Trọn bộ</string>
    <string name="defaultEpisode">Tập 01</string>
    <string name="tvFav">Yêu thích</string>
    <string name="listFav">Phim yêu thích</string>
</resources>