<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color_gradient">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/tv_login"
        android:textColor="@color/g_white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:paddingEnd="15dp"
        android:background="@drawable/bg_intro_btn"
        android:hint="@string/tv_email"
        android:textAlignment="center"
        android:textColor="@color/g_white"
        android:textColorHint="@color/g_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/tv_password"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:scrollHorizontally="false"
        android:textAlignment="center"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_intro_btn"
        android:textColor="@color/g_white"
        android:textColorHint="@color/g_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edEmail" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_forgot_your_password"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/g_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_intro_btn"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scrollHorizontally="false"
        android:textColor="@color/g_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/tv_register_now"
        android:textAlignment="center"
        android:textColor="@color/g_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>