<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster2" />



        <TextView
            android:id="@+id/tvFilmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/tvMovieTitle"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/imgPoster" />

        <ImageView
            android:id="@+id/imgTime"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_time"
            app:layout_constraintTop_toBottomOf="@+id/tvFilmTitle"
            app:layout_constraintStart_toStartOf="@+id/tvFilmTitle"
            app:tint="@color/g_gray500" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time"
            android:textColor="@color/g_gray500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgTime"
            app:layout_constraintStart_toEndOf="@+id/imgTime"
            app:layout_constraintTop_toTopOf="@+id/imgTime" />

        <ImageView
            android:id="@+id/imgViews"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintTop_toTopOf="@+id/imgTime"
            app:layout_constraintBottom_toBottomOf="@id/imgTime"
            app:layout_constraintStart_toEndOf="@+id/tvTime"
            app:tint="@color/g_gray500" />

        <TextView
            android:id="@+id/tvViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="0"
            android:textColor="@color/g_gray500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgViews"
            app:layout_constraintStart_toEndOf="@+id/imgViews"
            app:layout_constraintTop_toTopOf="@+id/imgViews" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/views"
            android:textColor="@color/g_gray500"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgViews"
            app:layout_constraintStart_toEndOf="@+id/imgViews"
            app:layout_constraintTop_toTopOf="@+id/imgViews" />

        <LinearLayout
            android:id="@+id/layoutGenre"
            android:layout_width="0dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/imgTime">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hành động, Kinh dị, Tâm Lý"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutYear"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/layoutGenre">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvYear"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2023"
                android:layout_marginStart="40dp"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/layoutYear">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLanguage"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tiếng Việt"
                android:layout_marginStart="27dp"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDirectors"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/layoutLanguage">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDirectors"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvDirectors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Victor Salva"
                android:layout_marginStart="34dp"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutActors"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/layoutDirectors">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvActors"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvActors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jonathan Breck, Gina Philips, Stan Shaw"
                android:layout_marginStart="32dp"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNation"
            android:layout_width="0dp"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/layoutActors">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNations"
                android:textColor="@color/g_blue_gray200"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvNation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mỹ"
                android:layout_marginStart="34dp"
                android:textColor="@color/g_white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:text="Tóm tắt"
            android:textSize="20sp"
            android:textColor="@color/g_white"
            app:layout_constraintTop_toBottomOf="@id/layoutNation"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content">
        </TextView>


        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:maxLines="5"
            android:text="@string/summary"
            android:textColor="@color/g_white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/summary"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_fav"
            app:layout_constraintBottom_toBottomOf="@id/imgBack"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/imgBack"
            app:tint="@drawable/selector_fav" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="1dp"
            android:src="@drawable/bg_play"
            app:layout_constraintBottom_toBottomOf="@+id/imgPoster"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImage"
            app:strokeWidth="1dp" />


        <ImageView
            android:id="@+id/img_play"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="3dp"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:tint="@color/g_white" />

        <TextView
            android:id="@+id/tvGeneral"
            android:layout_width="wrap_content"
            android:text="Cùng thể loại"
            android:textSize="20sp"
            android:textColor="@color/g_white"
            app:layout_constraintTop_toBottomOf="@id/tvSummary"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            android:layout_marginTop="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvGeneral"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="179dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>